--- a/src/Services/FoodType/FoodType.API/appsettings.json
+++ b/src/Services/FoodType/FoodType.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "VirtualSchool": {
+    "url": "https://vsopen.ru/app"
+  }
 }
