chore: add food type api

--- a/src/Services/FoodType/FoodType.API/appsettings.json
+++ b/src/Services/FoodType/FoodType.API/appsettings.json
@@ -6,7 +6,5 @@
     }
   },
   "AllowedHosts": "*",
-  "VirtualSchool": {
-    "url": "https://vsopen.ru/app"
-  }
+  "FoodProviderBaseUrl": "https://vsopen.ru/app/"
 }
